--- a/project.config.json
+++ b/project.config.json
@@ -12,7 +12,7 @@
 	},
 	"compileType": "miniprogram",
 	"libVersion": "2.0.4",
-	"appid": "wx05cb24b28817005f",
+	"appid": "wx8a5d3e7d919b19d4",
 	"projectname": "BQS",
 	"debugOptions": {
 		"hidedInDevtools": []
