--- a/project.config.json
+++ b/project.config.json
@@ -13,7 +13,7 @@
 	"compileType": "miniprogram",
 	"libVersion": "2.4.1",
 	"appid": "wxbcdaa51d5443fa77",
-	"projectname": "Breo",
+	"projectname": "Breo_UAT",
 	"debugOptions": {
 		"hidedInDevtools": []
 	},
