--- a/project.config.json
+++ b/project.config.json
@@ -8,10 +8,11 @@
 		"es6": true,
 		"postcss": true,
 		"minified": true,
-		"newFeature": true
+		"newFeature": true,
+		"autoAudits": true
 	},
 	"compileType": "miniprogram",
-	"libVersion": "2.4.1",
+	"libVersion": "2.4.4",
 	"appid": "wxbcdaa51d5443fa77",
 	"projectname": "Breo_UAT",
 	"debugOptions": {
