安卓正常。iOS有bug

--- a/app.json
+++ b/app.json
@@ -1,6 +1,7 @@
 {
   "pages": [
     "pages/index/index",
+    "pages/choiceCoupon/choiceCoupon",
     "pages/logs/logs",
     "pages/login/login",
     "pages/coupon/couponReceive",
